 * Fix the behavior of complex data types handling.
 * Make MPI_Wtime another synchronization point to take computations into account.
 * Replace MPICH-1 test suite by the one from MPICH 3.0.4. Can be built using
   enable_smpi_MPICH3_testsuite flag in cmake. Run with ctest.
 * Add all missing Fortran bindings, SMPI should work with Fortran 90
   (no privatization of global variables yet)

 Model-Checking;
 * Verification of liveness properties is now available for SMPI applications
   (in addition to MSG applications)
 * Bugged examples using SMPI in examples/smpi/mc/
 * Add --cfg=model-check/visited option. Allows the verification of infinite
   programs. Detection of loops in the execution thanks to the system state
   comparison and reduction of the state space to explore. Can be combined with
   DPOR for safety properties.

 SimDag:
 * Allow to change SimGrid configuration (see --help) within the code
   thanks to SD_config() as it can be done in MSG.
 * Add a new function SD_task_set_amount() upon user request.

 PLATFORM:
 * Handle units for values (10ms, 10kiloflops, 10Bps, 1GB, ...)
 * Remove rule based routing (no more PCRE dependency)
 * Add a limiter_link option to cluster tag, to specify a maximum reachable
   bandwidth in fullduplex mode when it is less than twice the nominal bandwidth.
 * Add a loopback_bw and loopback_lat options to cluster tag.
 * Fix the peer tag that could not be mixed with other AS within a Vivaldi
   routing. Now peers are encapsulated in an AS and have their own private
   router but this is transparent.

 XBT:
 * Our own implementation of getline is renamed xbt_getline, and gets
   used even if the OS provide a getline(). This should reduce the
   configuration complexity by using the same code on all platforms.
 * New type: xbt_cfg_elm_boolean.
 * Allow to use yes/no for boolean configuration options in the command line.
 * Allow to disable SimGrid cleanups at exit from command line option.